# AI-PC_Notebooks

./: 2_ollama_gpu.ipynb  3_llm_pytorch_gpu.ipynb  4_llm-rag.ipynb  7_llm_sycl_gpu_python.ipynb  8_llm_sycl_multimodal.ipynb  9_rag_lanchain.ipynb  LICENSE  README.md  ipex_llm_gpu.ipynb  ipex_llm_ollama_gpu.ipynb  ipex_llm_pytorch_gpu.ipynb  llm-rag.ipynb  requirements.txt
.github/workflows/: automateDependabot.yml  autopep8.yml  bandit.yml  codeql.yml  coverity_scan.yml  scorecard.yml  trivy.yml
AI-Documentation/: README.md  requirements.txt
AI-Documentation/aidocapp/: __main__.py  app.py  model.py  utils.py
AI-Documentation/example/: add_with_comments.py  factorial.py  fibonacci_seq.py
AI-Travel-Agent/: .env  AI_Travel_Agent.ipynb  AI_Travel_Agent_streamlit.py  LLM_Agent_with_custom_tools.ipynb  README.md  requirements.txt
AI-Upscaling/: network_rrdbnet.py  ruff.toml
AI-Upscaling-With-NPU/: .gitignore  AI_Upscaling_With_NPU.ipynb  README.md  bsrgan_helper.py  bsrgan_utils.py  network_rrdbnet.py  pixi.toml  pyproject.toml  sample.json  sample_utils.py  utils.py
AI-Upscaling-With-NPU/tools/: get_pixi.ps1  get_pixi.sh  install_pixi.ps1  install_pixi.sh  pixi_settings.env  pixi_settings.ps1  run_pixi.sh
AI-Upscaling/tools/: pixi_settings.ps1
AI-Web-Language-Tutor/: README.md  index.html  serviceWorker.js  styles.css
AI-Web-Language-Tutor/local/: script.js  server.js
AI-Web-Language-Tutor/server/: script.js  server.js
Automated-Prompt-Engineering/: .gitignore  AutomatedPromptEngineering.ipynb  README.md  pixi.toml  ruff.toml  sample.json
Automated-Prompt-Engineering/tools/: check_if_ai_pc.ps1  check_if_ai_pc.sh  get_pixi.sh  install_pixi.ps1  install_pixi.sh  pixi_settings.env  run_pixi.cmd  run_pixi.ps1  run_pixi.sh
Finetune_Image_Captioning/: README.md  finetune_image_captioning.ipynb  pyproject.toml
Finetune_Image_Captioning/assets/: results_after_training.csv  results_before_training.csv
Genre-driven-storytelling/: .gitignore  Genre-driven-storytelling.ipynb  README.md  pyproject.toml
LLM/: 01_native_gpu.ipynb  02_ollama_gpu.ipynb  03_llm_pytorch_gpu.ipynb  04_llm-rag.ipynb  05_llm_quantization_sycl.ipynb  06_llm_sycl_gpu.ipynb  07_llm_sycl_gpu_python.ipynb  08_llm_sycl_multimodal.ipynb  09_rag_langchain.ipynb  10_rag_pytorch.ipynb  README_RAG.md
LLM/Modelfile/: Modelfile.llama3
LLM/PyTorch/: .gitignore  bark_pytorch.ipynb  distil_whisper_pytorch.ipynb  pyproject.toml
LLM/data/: README.md
LLM/rag/: requirements.txt
LLM/src/: st_rag_chromadb.py  st_visual_answering.py
Llama-Cpp-Dockerfile/: Dockerfile  LICENSE  README.md
Text-Summarizer-Browser-Plugin/: .gitignore  README.md  TextSummarizerPlugin.ipynb  pyproject.toml  requirements.txt  tom.txt
Text-Summarizer-Browser-Plugin/.ipynb_checkpoints/: TextSummarizerPlugin-checkpoint.ipynb
Text-Summarizer-Browser-Plugin/backend/: code.py  llm_engine.py  server.py
Text-Summarizer-Browser-Plugin/backend/.ipynb_checkpoints/: code-checkpoint.py  server-checkpoint.py
Text-Summarizer-Browser-Plugin/extension/: manifest.json  popup.html  popup.js  style.css
Video-Description-Generation-Query-Retrieval/: Readme.md  Video_Description_Generation_Query_Retrieval.ipynb  pyproject.toml
Web-Apps/WebLLM/: 01_completion.html  03_model_select.html  03_streaming.html  11_basicUI.html  12_generationUI.html  13_chatUI.html  README.md
Web-Apps/WebLLM/WebLLM-final-demo/: chat.js  index.html
Web-Apps/WebNN/: README.md  third-party-programs.txt
Web-Apps/WebNN/getting-started/: 01_webnn_enable.html  02_webnn_devices.html  03_webnn_device_select.html  04_webnn_compute.html  05_webnn_compute_large.html
Web-Apps/WebNN/webnn-demos/demo-image-classify/: README.md  webapp_image_classify_core_00.html  webapp_image_classify_core_01.html  webapp_image_classify_demo_01.html
Web-Apps/WebNN/webnn-samples/image_classification_onnx/: README.md  index.html  main.js  main_device_priority.js  model_export.bat  model_export.sh
Web-Apps/WebNN/webnn-samples/image_classification_onnx/google_mobilenet_v2_1.0_224/: config.json  preprocessor_config.json
Web-Apps/WebNN/webnn-samples/image_classification_transformers.js/: README.md  index.html  index_device_priority.html  index_local_model.html
Web-Apps/WebNN/webnn-samples/image_classification_transformers.js/Xenova_resnet-18/: README.md  config.json  quantize_config.json
Web-Apps/WebNN/webnn-samples/image_classification_webnn/: README.md  index.html  main.js  mobilenet_nhwc.js  utils.js
WebLLM/: README.md
rag/: requirements.txt
src/: chat.py  st_ipexllm_native.py  st_ollama.py  st_rag_chromadb.py  st_visual_answering.py
