[project]
name = "ai-upscaling-with-npu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "safetensors>=0.5.2",
    "openvino>=2025.0.0",
    "opencv-python>=4.11.0.86",
    "nncf>=2.15.0",
    "torchinfo>=1.8.0",
    "plotly>=6.0.0",
    "ffmpeg-python>=0.2.0",
    "torch==2.7.1",
    "certifi==2025.4.26",
    "h11==0.16.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "jupyterlab==4.4.1",
    "notebook==7.4.1",
    "requests==2.32.4",
    "urllib3==2.4.0"
]

[dependency-groups]
dev = [
    "bandit>=1.8.2",
    "nb-clean>=4.0.1",
    "nbqa>=1.9.1",
    "pyproject-runner>=0.3.0",
    "ruff>=0.9.6",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = { index = "pytorch" }

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
extend-exclude = [".venv"]

[tool.ruff.lint]
preview = true
extend-select = ["S", "ERA", "PD", "NPY", "E", "E501"]

[tool.ruff.format]
preview = true

[tool.pyproject-runner.tasks]
lint = "ruff check . --fix"
format = "ruff format ."
lint_check = "ruff check ."
format_check = "ruff format . --check"
bandit_check = "bandit -r . --exclude ./.venv"
lint_notebook = "nbqa 'ruff check  --fix' AI_Upscaling_With_NPU.ipynb"
format_notebook = "nbqa 'ruff format' AI_Upscaling_With_NPU.ipynb"
clean_notebook = "nb-clean clean --remove-empty-cells AI_Upscaling_With_NPU.ipynb"
lint_notebook_check = "nbqa 'ruff check' AI_Upscaling_With_NPU.ipynb"
format_notebook_check = "nbqa 'ruff format --check' AI_Upscaling_With_NPU.ipynb"
bandit_notebook_check = "bandit AI_Upscaling_With_NPU.ipynb"
execute = "jupyter nbconvert --execute --to notebook --inplace --debug AI_Upscaling_With_NPU.ipynb"
validate = {pre = [
        "lint_check", 
        "format_check", 
        "bandit_check",
        "lint_notebook_check", 
        "format_notebook_check", 
        "bandit_notebook_check"
        ], post = ["execute"]}
