[project]
name = "text-summarizer-browser-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "optimum[nncf,openvino]>=1.25.3",
    "pypdf>=5.5.0",
    "sentence-transformers>=4.1.0",
]
